--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    // Google Calendar API dependencies
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    api 'com.google.apis:google-api-services-calendar:v3-rev119-1.19.1'
+    api 'com.google.api-client:google-api-client:1.23.0'
+    api 'com.google.api-client:google-api-client-android:1.23.0'
+    api 'com.google.api-client:google-api-client-gson:1.19.1'
 }
