--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     api 'com.google.api-client:google-api-client-android:1.23.0'
     api 'com.google.api-client:google-api-client-gson:1.19.1'
 
-//    implementation 'com.github.alamkanak:android-week-view:1.2.6'
     implementation 'com.github.thellmund:Android-Week-View:3.1.3'
+}
+
+configurations {
+    all {
+        exclude module: 'httpclient'
+    }
 }
