--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -38,10 +40,14 @@ dependencies {
     api 'com.google.api-client:google-api-client-gson:1.19.1'
 
     implementation 'com.github.thellmund:Android-Week-View:3.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 configurations {
     all {
         exclude module: 'httpclient'
     }
+}
+repositories {
+    mavenCentral()
 }
