--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="edu.rit.csh.bettervent">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.MANAGE_DEVICE_ADMINS"
+    <uses-permission
+        android:name="android.permission.MANAGE_DEVICE_ADMINS"
         tools:ignore="ProtectedPermissions" />
-
 
     <meta-data
         android:name="com.google.android.gms.version"
@@ -20,23 +21,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
-        <receiver android:name="edu.rit.csh.bettervent.AdminReceiver"
-            android:label="@string/sample_device_admin"
+        <activity android:name=".SignInActivity"></activity>
+
+        <receiver
+            android:name=".AdminReceiver"
             android:description="@string/sample_device_admin_description"
+            android:label="@string/sample_device_admin"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data android:name="android.app.device_admin"
+            <meta-data
+                android:name="android.app.device_admin"
                 android:resource="@xml/device_admin_receiver" />
+
             <intent-filter>
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
+
         <activity
             android:name=".MainActivity"
             android:label="Bettervent"
             android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-                        android:label="Welcome to Computer Science House"/>
+                <action
+                    android:name="android.intent.action.MAIN"
+                    android:label="Welcome to Computer Science House" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
