--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
-        <activity android:name=".EventActivity"
+        <activity android:name=".view.EventActivity"
             android:screenOrientation="landscape"
             android:configChanges="orientation">
 
@@ -42,7 +42,7 @@
         </receiver>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:label="Bettervent"
             android:theme="@style/AppTheme">
             <intent-filter>
